# digital-object

./: .pylintrc  Makefile  README.md  pyproject.toml
src/digital_object/: __init__.py  digital_object_model.py  digital_object_util.py  filter.py  format_alto_v3_util.py  format_page_util.py  main.py
tests/: test_digital_object_ocr.py  test_digital_object_ocr_alto.py  test_digital_object_ocr_filter.py  test_digital_object_ocr_page.py
